test/typeCheckTest/fail/test26.ic
class BadMult {
	void main (string [] args) {
		boolean b = args[0] * 2;
	}
}